# portfolio-back

./: .pre-commit-config.yaml  README.md  alembic.ini  env.example  portfolio.db  pyproject.toml
.github/workflows/: python-app.yml
deploy/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
portfolio_backend/: __main__.py  conftest.py  gunicorn_runner.py  logging.py  settings.py
portfolio_backend/db/: base.py  dependencies.py  meta.py  utils.py
portfolio_backend/db/dao/: base_dao.py  chat_dao.py  dummy_dao.py  message_dao.py  text_data_dao.py
portfolio_backend/db/migrations/: env.py
portfolio_backend/db/migrations/versions/: 1_init_migration.py
portfolio_backend/db/models/: __init__.py  chat_model.py  dummy_model.py  message_model.py  text_data_model.py
portfolio_backend/services/: __init__.py
portfolio_backend/services/chat/: chat_handler.py  config.py  dependencies.py
portfolio_backend/services/embeddor/: embeddings.py
portfolio_backend/static/data/: _embedded_text.csv  embedded_text.csv
portfolio_backend/static/data/text_data/: Experience - Data Engineer at Klarna Bank AB.txt  Experience - IT Consultant & Machine Learning Engineer at Aigometri AB.txt  Experience - R&D Engineer at Novel-Ti.txt  Experience - Senior Software Engineer at Klarna Bank AB.txt  Experience - Software Engineer at Klarna Bank AB.txt  about.txt  education.txt  experience.txt  soft skills.txt  technical skills.txt
portfolio_backend/tests/: __init__.py  test_dummy.py  test_echo.py  test_portfolio_backend.py
portfolio_backend/utils/: utils.py
portfolio_backend/vdb/: configs.py  dependencies.py  milvus_connector.py
portfolio_backend/web/: __init__.py  application.py  lifetime.py  rate_limiter.py
portfolio_backend/web/api/: __init__.py  router.py
portfolio_backend/web/api/chat/: __init__.py  schema.py  views.py
portfolio_backend/web/api/docs/: __init__.py
portfolio_backend/web/api/dummy/: __init__.py  schema.py  views.py
portfolio_backend/web/api/echo/: __init__.py  views.py
portfolio_backend/web/api/message/: __init__.py  schema.py  views.py
portfolio_backend/web/api/monitoring/: __init__.py  views.py
portfolio_backend/web/api/text_data/: __init__.py  schema.py  views.py
scripts/: run.sh
