[tool.poetry]
name = "portfolio_backend"
version = "0.1.0"
description = ""
authors = [

]
maintainers = [

]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.100.0"
uvicorn = { version = "^0.22.0", extras = ["standard"] }
gunicorn = "^21.2.0"
pydantic = "^2"
pydantic-settings = "^2"
yarl = "^1.9.2"
ujson = "^5.8.0"
SQLAlchemy = {version = "^2.0.18", extras = ["asyncio"]}
alembic = "^1.11.1"
asyncpg = {version = "^0.28.0", extras = ["sa"]}
aiofiles = "^23.1.0"
httptools = "^0.6.0"
prometheus-client = "^0.17.0"
prometheus-fastapi-instrumentator = "6.0.0"
loguru = "^0.7.0"



[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
mypy = "^1.1.1"
pre-commit = "^3.0.1"
wemake-python-styleguide = "^0.17.0"
pytest-cov = "^4.0.0"
anyio = "^3.6.2"
pytest-env = "^0.8.1"
httpx = "^0.23.3"
ruff = "^0.5.1"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    ".cache",
    ".idea",
    ".mypy_cache",
    ".pytest_cache",
    "*migrations*",
    "__pycache__",
    "static",
    "docs",
]
# Max line length
line-length = 120
indent-width = 4
# Python version
target-version = "py310"
[tool.ruff.lint]
select = [
    "E",  # Errors
    "W",  # Warnings
    "F",  # Pyflakes
    "C",  # Cyclomatic complexity
    "D",  # Docstrings
    "N",  # Naming
    "B",  # Bugbear
    "Q",  # Quotes
    "I",  # Import order
    "SIM",  # Simplifications
    "COM",  # Commas
    "C90",  # Code Complexity
    "UP",  # Pyupgrade
    "ANN",  # Annotations
    "ASYNC",  # Async
    "S",  # Bandit
    "BLE",  # Blind-except
    "FBT",  # Boolean-trap
    "A",  # Builtins
    "C4",  # Comprehensions
    "LOG",  # Logging
    "G",  # Logging-format
    "ARG",  # Unused arguments
    "PL",  # Pylint
    "R",  # Refactor
]
# List of disabled rules
ignore = [
    "E501",  # Line too long
    # "W503",  # Line break before binary operator
    "D100",  # Missing docstring in public module
    "D107",  # Missing docstring in `__init__`
    "B008",  # Function calls in default function arguments.
    "D203",  # One-blank-line-before-class
    "D213",  # Multi-line-summary-second-line
    "COM812",  # Missing-trailing-comma
    "ANN101",  # missing-type-self
    "ANN401",  # Any-type
    "ANN204",  # Missing-return-type-special-method
    "D103",
    "D101",
    "D104",
    "D102",
]
[tool.ruff.format]
# Indent with spaces
indent-style = "space"
# Use double quotes for strings.
quote-style = "double"
line-ending = "lf"  # Line ending (choices: "lf", "crlf", "cr")
# Per-file-ignores
[tool.ruff.lint.per-file-ignores]
"*tests/*" = ["D", "N", "S101"]
[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
allow_untyped_calls = true
pretty = true
show_error_codes = true
implicit_reexport = true
allow_untyped_decorators = true
warn_unused_ignores = false
warn_return_any = false
namespace_packages = true

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore:.*unclosed.*:ResourceWarning",
]
env = [
    "PORTFOLIO_BACKEND_ENVIRONMENT=pytest",
    "PORTFOLIO_BACKEND_DB_BASE=portfolio_backend_test",
]

[fastapi-template.options]
project_name = "portfolio_backend"
api_type = "rest"
enable_redis = "None"
enable_rmq = "None"
ci_type = "none"
enable_migrations = "True"
enable_taskiq = "None"
enable_kube = "None"
kube_name = "portfolio-backend"
enable_routers = "True"
enable_kafka = "None"
enable_loguru = "True"
traefik_labels = "None"
add_dummy = "True"
orm = "sqlalchemy"
self_hosted_swagger = "True"
prometheus_enabled = "True"
sentry_enabled = "None"
otlp_enabled = "None"
pydanticv1 = "None"
gunicorn = "True"
add_users = "None"
cookie_auth = "None"
jwt_auth = "None"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
