[project]
name = "portfolio_backend"
version = "0.1.0"
description = ""
authors = []
requires-python = "~=3.10"
readme = "README.md"
maintainers = []
dependencies = [
    "fastapi>=0.100.0,<0.101",
    "uvicorn[standard]>=0.22.0,<0.23",
    "gunicorn>=21.2.0,<22",
    "pydantic>=2,<3",
    "pydantic-settings>=2,<3",
    "yarl>=1.9.2,<2",
    "ujson>=5.8.0,<6",
    "SQLAlchemy[asyncio]>=2.0.18,<3",
    "alembic>=1.11.1,<2",
    "asyncpg[sa]>=0.28.0,<0.29",
    "aiofiles>=23.1.0,<24",
    "httptools>=0.6.0,<0.7",
    "prometheus-client>=0.17.0,<0.18",
    "prometheus-fastapi-instrumentator==6.0.0",
    "loguru>=0.7.0,<0.8",
    "pandas>=2.2.2,<3",
    "pymilvus>=2.4.4,<3",
    "slowapi>=0.1.9,<0.2",
    "redis>=5.0.8,<6",
    "langchain-openai==0.1.17",
]

[dependency-groups]
dev = [
    "pytest>=7.2.1,<8",
    "mypy>=1.11.2,<2",
    "pre-commit>=3.0.1,<4",
    "wemake-python-styleguide>=0.17.0,<0.18",
    "pytest-cov>=4.0.0,<5",
    "anyio>=3.6.2,<4",
    "pytest-env>=0.8.1,<0.9",
    "httpx>=0.23.3,<0.24",
    "ruff>=0.5.7,<0.6",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    ".cache",
    ".idea",
    ".mypy_cache",
    ".pytest_cache",
    "*migrations*",
    "__pycache__",
    "static",
    "docs",
]
# Max line length
line-length = 120
indent-width = 4
# Python version
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # Errors
    "W",  # Warnings
    "F",  # Pyflakes
    "C",  # Cyclomatic complexity
    "D",  # Docstrings
    "N",  # Naming
    "B",  # Bugbear
    "Q",  # Quotes
    "I",  # Import order
    "SIM",  # Simplifications
    "COM",  # Commas
    "C90",  # Code Complexity
    "UP",  # Pyupgrade
    "ANN",  # Annotations
    "ASYNC",  # Async
    "S",  # Bandit
    "BLE",  # Blind-except
    "FBT",  # Boolean-trap
    "A",  # Builtins
    "C4",  # Comprehensions
    "LOG",  # Logging
    "G",  # Logging-format
    "ARG",  # Unused arguments
    "PL",  # Pylint
    "R",  # Refactor
]
# List of disabled rules
ignore = [
    "E501",  # Line too long
    # "W503",  # Line break before binary operator
    # "D100",  # Missing docstring in public module
    # "D107",  # Missing docstring in `__init__`
    "B008",  # Function calls in default function arguments.
    "D203",  # One-blank-line-before-class
    "D213",  # Multi-line-summary-second-line
    # "COM812",  # Missing-trailing-comma
    "ANN101",  # missing-type-self
    "ANN401",  # Any-type
    "ANN204",  # Missing-return-type-special-method
    # "D103",
    # "D101",
    # "D104",
    # "D102",
]

[tool.ruff.format]
# Indent with spaces
indent-style = "space"
# Use double quotes for strings.
quote-style = "double"
line-ending = "lf"  # Line ending (choices: "lf", "crlf", "cr")

[tool.ruff.lint.per-file-ignores]
"*tests/*" = ["D", "N", "S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
allow_untyped_calls = true
pretty = true
show_error_codes = true
implicit_reexport = true
allow_untyped_decorators = true
warn_unused_ignores = false
warn_return_any = false
namespace_packages = true

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore:.*unclosed.*:ResourceWarning",
]
env = [
    "PORTFOLIO_BACKEND_ENVIRONMENT=pytest",
    "PORTFOLIO_BACKEND_DB_BASE=portfolio_backend_test",
]

[fastapi-template.options]
project_name = "portfolio_backend"
api_type = "rest"
enable_redis = "None"
enable_rmq = "None"
ci_type = "none"
enable_migrations = "True"
enable_taskiq = "None"
enable_kube = "None"
kube_name = "portfolio-backend"
enable_routers = "True"
enable_kafka = "None"
enable_loguru = "True"
traefik_labels = "None"
add_dummy = "True"
orm = "sqlalchemy"
self_hosted_swagger = "True"
prometheus_enabled = "True"
sentry_enabled = "None"
otlp_enabled = "None"
pydanticv1 = "None"
gunicorn = "True"
add_users = "None"
cookie_auth = "None"
jwt_auth = "None"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
